# MLGym

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  READTHIS_DOTENV  count_by_model_task.sh  pyproject.toml  rename_folders.sh  requirements.txt  run.py  run_experiments.sh  run_replay.py
configs/datasets/: titanic.yaml
configs/tasks/: titanic.yaml
data/3SATTime/: evaluate.py
data/languageModelingFineWeb/: evaluate.py
data/rlMountainCarContinuousReinforce/: requirements.txt
demo/: trajectory_visualizer.py
docs/: RANKING_MIGRATION_PLAN.md
mlgym/: __init__.py  exceptions.py  types.py
mlgym/agent/: base.py  history_processors.py  parsing.py
mlgym/backend/: __init__.py  base.py  debugging.py  human.py  litellm.py  utils.py
mlgym/environment/: env.py  registration.py  spaces.py  tasks.py  utils.py
mlgym/evaluation/: utils.py
mlgym/tools/: commands.py  parsing.py  tools.py
mlgym/utils/: config.py  extras.py  log.py
notebooks/: plotting.py
results/tables/: aup_scores_aggregate_results.csv  aup_scores_test_results.csv  best_ranks_aggregate_results.csv  best_ranks_test_results.csv  best_scores_aggregate_results.csv  best_scores_test_results.csv  last_ranks_aggregate_results.csv  last_ranks_test_results.csv  last_scores_aggregate_results.csv  last_scores_test_results.csv
scripts/: count_by_model_task.sh  count_valid_trajectories.py  rename_folders.sh
scripts/evaluation/: get_ranks.py  plot_exit_status.py  process_results.py
scripts/experiments/: imageClassificationCifar10L1.sh  regressionKaggleHousePriceL1.sh  rlMountainCarContinuousReinforce.sh
scripts/experiments/memory/: imageClassificationFMnist.sh  rlMountainCarContinuous.sh
scripts/experiments/mlgym_bench_v0/: 3SAT.sh  blotto.sh  bos.sh  imageCaptioningCOCO.sh  imageClassificationCifar10.sh  imageClassificationFMnist.sh  languageModelingFineWeb.sh  naturalLanguageInferenceMNLI.sh  prisonersDilemma.sh  regressionKaggleHousePrice.sh  rlBreakoutMinAtar.sh  rlMetaMaze.sh  rlMountainCarContinuous.sh
tools/: _split_string.py
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__3SATTime__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_0/: 3SATTime.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__3SATTime__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_1/: 3SATTime.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__3SATTime__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_2/: 3SATTime.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__3SATTime__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_3/: 3SATTime.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__battleOfSexes__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_0/: battleOfSexes.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__battleOfSexes__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_1/: battleOfSexes.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__battleOfSexes__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_2/: battleOfSexes.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__battleOfSexes__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_3/: battleOfSexes.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__blotto__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_0/: blotto.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__blotto__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_1/: blotto.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__blotto__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_2/: blotto.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__blotto__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_3/: blotto.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__imageCaptioningCOCO__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_0/: imageCaptioningCOCO.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__imageCaptioningCOCO__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_1/: imageCaptioningCOCO.traj
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__imageCaptioningCOCO__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_2/: imageCaptioningCOCO.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-37-sonnet__imageCaptioningCOCO__default__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_3/: imageCaptioningCOCO.traj
(+736 files in other folders)
